n8n/service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: default
  labels:
    app: n8n
    component: service
spec:
  type: NodePort
  selector:
    app: n8n
    component: deployment
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5678
