n8n/ingress-rewrite.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-service-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
